# yeelight-cli

./: Cargo.toml  README.md
src/: main.rs  presets.rs
