[package]
name = "yeelight-cli"
version = "0.2.0"
authors = ["Leixb <abone9999@gmail.com>"]
edition = "2018"
description = "Rust CLI to control yeelight WiFi Bulbs"
documentation = "https://docs.rs/yeelight-cli"
readme = "./README.md"
repository = "https://github.com/leixb/yeelight-cli"
license = "MIT"
keywords = ["yeelight", "iot", "cli"]
categories = ["command-line-interface"]

[dependencies]
yeelight = { version="0.3.0", features = ["from-str"]}
structopt = "0.3.15"
tokio = { version="0.2.21", features = ["macros"] }

[badges]
maintenance = { status="actively-developed" }
